# lightning_boilerplate

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run_from_config.py
callbacks/: BasicImageLogger.py  ConfigCallback.py  __init__.py
configs/: basic.yaml
data/: ABCDataset.py  DataModules.py  Datasets.py  __init__.py
layers/: __init__.py  activations.py  initializers.py  layers.py
lightning_boilerplate/: __init__.py  run_from_config.sh
lightning_boilerplate/callbacks/: ABCImageLogger.py  BasicImageLogger.py
lightning_boilerplate/configs/: basic.yaml
lightning_boilerplate/data/: ABCDataset.py  DataModules.py
lightning_boilerplate/layers/: activations.py
lightning_boilerplate/losses/: PSNR.py  Regularizers.py  SSIM.py  __init__.py
lightning_boilerplate/models/: BasicMLP.py  __init__.py
lightning_boilerplate/transforms/: ABCTransform.py  __init__.py
lightning_boilerplate/utils/: imaging.py  visualization.py
losses/: ABCLoss.py  ABCRegularizer.py  Constraints.py  MSE.py  __init__.py
models/: ABCModel.py  BasicMLP.py  __init__.py
transforms/: Transforms.py
utils/: __init__.py  args.py  numeric.py  visualization.py
