[project]
name = "lightning-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "ptwt>=1.0.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
